Version 0.10.0
~~~~~~~~~~~~~
Released: 2026-XX-XX

Features:
  * [#711] Add macOS menu bar status item (NSStatusItem) with system tray icon.

Version 0.9.4
~~~~~~~~~~~~~
Released: 2025-02-17

Features:
  * [#667] Add insert image for the popup menu of the chat input area.
  * [#664, #666] port snapcraft from core20 to core24.
  * [#665] introduce soversion for iptux-core library.
  * [#657] improve log
  * [#625] support flatpak
  * [#642] add a new option to hide taskbar when main window iconified.

Bugfixes:
  * [#658] after close dialog and reopen, the image no longer exists.
  * [#656] fix iptux stackoverflow when receiving directory.
  * [#645] check exist preference dialog before open a new one.
  * [#628] fix wrap mode of chat dialog.
  * [#614] no extra \U0001 when sending image.

Version 0.9.3
~~~~~~~~~~~~~
Released: 2024-06-22

Features:
  * [#593, #595, #601, #604] support paste image into chatbox, support copy/save
    image in chat history.
  * [#586] add keywords to metainfo and desktop file.

Bugfixes:
 * [#584] fix compile failed under armhf.

Version 0.9.1
~~~~~~~~~~~~~
Released: 2024-05-12

Bugfixes:
 * [#577] fix UT timeout when run without browser and a new meson version.

Translation:
 * [#576] update Spanish translation. Thanks to gallegonovato.
 * [#579] update Traditional Chinese translation. Thanks to xiao sheng wen.

Version 0.9.0
~~~~~~~~~~~~~
Released: 2024-05-09

Features:
 * [#524] add more sort methods and view methods.
 * [#517] add system tray icon / appindicator.
 * [#559] support change port in the Preferences dialog.

Bugfixes:
 * [#536]: don't show headerbar and menu at the same time; support headerbar
   for peer/group dialog

Translation:
 * Spanish translation. Thanks to gallegonovato.

Version 0.8.5
~~~~~~~~~~~~~
Released: 2024-04-14

Bugfixes:
 * [#516] Fix typo in the Preferences dialog.
 * [#520] Fix window resize behavior.
 * [#531, #533] Improve crash handler.
 * [#536] Fix bug in menu.

Translation: