@@ -1,0 +1,12 @@
+// SPDX-License-Identifier: GPL-2.0-or-later
+#pragma once
+
+namespace iptux {
+
+enum StatusIconMode {
+  STATUS_ICON_MODE_NONE = 0,
+  STATUS_ICON_MODE_NORMAL = 1,
+  STATUS_ICON_MODE_BLINKING = 2,
+};
+
+}  // namespace iptux
