@@ -28,6 +28,21 @@ using namespace std;
 
 namespace iptux {
 
+static const struct {
+  StatusIconMode mode;
+  const char* label;
+} kStatusIconModes[] = {
+    {STATUS_ICON_MODE_NONE, N_("No status icon")},
+    {STATUS_ICON_MODE_NORMAL, N_("Normal status icon")},
+    {STATUS_ICON_MODE_BLINKING, N_("Blinking status icon")},
+};
+
+enum {
+  STATUS_ICON_MODEL_COL_ID,
+  STATUS_ICON_MODEL_COL_LABEL,
+  STATUS_ICON_MODEL_N_COLS,
+};
+
 /**
  * 类构造函数.
  */
@@ -410,6 +425,35 @@ GtkWidget* DataSettings::CreateSystem() {
   g_datalist_set_data(&widset, "taskbar-check-widget", widget);
 #endif
 
+#if HAVE_STATUS_ICON
+  row++;
+  label = gtk_label_new(_("Status icon:"));
+  gtk_widget_set_halign(label, GTK_ALIGN_END);
+  gtk_grid_attach(GTK_GRID(box), label, 0, row, 1, 1);
+
+  {
+    auto store = gtk_list_store_new(STATUS_ICON_MODEL_N_COLS, G_TYPE_STRING,
+                                    G_TYPE_STRING);
+    for (const auto& entry : kStatusIconModes) {
+      GtkTreeIter iter;
+      gtk_list_store_append(store, &iter);
+      gtk_list_store_set(store, &iter, STATUS_ICON_MODEL_COL_ID,
+                         std::to_string(entry.mode).c_str(),
+                         STATUS_ICON_MODEL_COL_LABEL, _(entry.label), -1);
+    }
+    widget = gtk_combo_box_new_with_model(GTK_TREE_MODEL(store));
+    g_object_unref(store);
+    gtk_combo_box_set_id_column(GTK_COMBO_BOX(widget),
+                                STATUS_ICON_MODEL_COL_ID);
+    auto cell = gtk_cell_renderer_text_new();
+    gtk_cell_layout_pack_start(GTK_CELL_LAYOUT(widget), cell, TRUE);
+    gtk_cell_layout_set_attributes(GTK_CELL_LAYOUT(widget), cell, "text",
+                                   STATUS_ICON_MODEL_COL_LABEL, NULL);
+  }
+  gtk_grid_attach(GTK_GRID(box), widget, 1, row, 1, 1);
+  g_datalist_set_data(&widset, "status-icon-mode-combo-widget", widget);
+#endif
+
   return GTK_WIDGET(box);
 }
 
@@ -596,6 +640,12 @@ void DataSettings::SetSystemValue() {
   gtk_toggle_button_set_active(
       GTK_TOGGLE_BUTTON(widget),
       g_progdt->isHideTaskbarWhenMainWindowIconified());
+#endif
+#if HAVE_STATUS_ICON
+  widget = GTK_WIDGET(
+      g_datalist_get_data(&widset, "status-icon-mode-combo-widget"));
+  gtk_combo_box_set_active_id(GTK_COMBO_BOX(widget),
+                              std::to_string(g_progdt->statusIconMode()).c_str());
 #endif
 }
 
@@ -961,6 +1011,12 @@ string DataSettings::ObtainSystemValue(bool dryrun) {
   widget = GTK_WIDGET(g_datalist_get_data(&widset, "taskbar-check-widget"));
   progdt->setHideTaskbarWhenMainWindowIconified(
       gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(widget)));
+#endif
+#if HAVE_STATUS_ICON
+  widget = GTK_WIDGET(
+      g_datalist_get_data(&widset, "status-icon-mode-combo-widget"));
+  progdt->setStatusIconMode(
+      std::stoi(gtk_combo_box_get_active_id(GTK_COMBO_BOX(widget))));
 #endif
   return oss.str();
 }
